# Resolv

./: .env.example  .gitignore  README.md  pyproject.toml
md/: PROJECT_OVERVIEW.md  asset_pipeline.md  scene_generation.md  unet_architecture.md
src/: inference.py  status.py  train.py
src/data_gen/: blender_utils.py  pipeline.py  run.py
src/data_gen/extractors/: __init__.py  ambientcg.py  base.py  blenderkit.py  polyhaven.py  sketchfab.py
src/model/: loss.py  unet.py  unet_parts.py
src/scene_gen/: run.py  scene_gen.py
tests/data_gen/: test_extractors.py
