[project]
name = "resolv"
version = "0.1.0"
description = ""
authors = [
    {name = "Romanos Chiliarchopoulos",email = "romanoshiliarhopoulos@gmail.com"}
]
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "bpy (==4.2.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "torch (>=2.11.0,<3.0.0)",
    "torchvision (>=0.26.0,<0.27.0)",
    "tqdm (>=4.67.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.resolv]
blender_path = ".blender/blender"
[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
